fix namespace error

--- a/src/LibraryAutomation.WinFormsUI/LibraryAutomation.WinFormsUI.csproj
+++ b/src/LibraryAutomation.WinFormsUI/LibraryAutomation.WinFormsUI.csproj
@@ -20,6 +20,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\LibraryAutomation.Infrastructure\LibraryAutomation.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="LibraryTheme">
       <HintPath>..\..\..\LibraryTheme.dll</HintPath>
     </Reference>
