--- a/src/LibraryAutomation.WinFormsUI/LibraryAutomation.WinFormsUI.csproj
+++ b/src/LibraryAutomation.WinFormsUI/LibraryAutomation.WinFormsUI.csproj
@@ -28,7 +28,7 @@
 
   <ItemGroup>
     <Reference Include="LibraryTheme">
-      <HintPath>..\..\..\LibraryTheme.dll</HintPath>
+      <HintPath>..\..\lib\LibraryTheme.dll</HintPath>
     </Reference>
   </ItemGroup>
 
