--- a/src/LibraryAutomation.WinFormsUI/LibraryAutomation.WinFormsUI.csproj
+++ b/src/LibraryAutomation.WinFormsUI/LibraryAutomation.WinFormsUI.csproj
@@ -6,7 +6,14 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <StartupObject>LibraryAutomation.WinFormsUI.Program</StartupObject>
+    <ApplicationIcon>AppIcon.ico</ApplicationIcon>
+    <AssemblyName>Library Automation</AssemblyName>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="AppIcon.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.4" />
